# verifycxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
verifycxx/: quick_test.cpp
verifycxx/include/: verifycxx.h
verifycxx/metrics/: benchmark.h  unit_test.h
